# nohow

./: .gitignore  Also not a heading  README.md  dot_nohow.yml  kokorotest.py  main.py  mcq.py  mcq_form.json  pyproject.toml
nohow/: main.py  mkdutils.py  utils.py
nohow/db/: models.py  utils.py
nohow/prompts/: chap_gen.py  chat_gen.py  mcq.py  utils.py
nohow/textual_comp/screens/: booklist.py  config.py  tocedit.py  tocreader.py
nohow/textual_comp/widgets/: booklist_widgets.py  chapter_view.py  chatbox.py  chatflow.py  utils.py
tests/: test_flatten_toc.py
toc_examples/: python_essentials.md  python_full.md
